Fix #769 - Add custom reminder notification names (#786)
* Replace (redundant) app name in notification title with user-inputted notification name.
* Small style fixes
* Add bridgette to contributors list

--- a/onebusaway-android/src/main/res/values/strings.xml
+++ b/onebusaway-android/src/main/res/values/strings.xml
@@ -778,7 +778,8 @@
         "* Cagri Cetin\n"
         "* Mike Karabushin\n"
         "* Aziz Batihk\n"
-        "* Charles Bond\n\n"
+        "* Charles Bond\n"
+        "* Bridgette Eichelberger\n\n"
 
         "Want to contribute to this app? Check it out on Github at
         https://github.com/OneBusAway/onebusaway-android.\n\n"
