Add HART and Simon Jacobs to contributors list
* For original trip planning implementation - Hillsborough Area Regional Transit (via Simon Jacobs at Cambridge Systematics)

--- a/onebusaway-android/src/main/res/values/strings.xml
+++ b/onebusaway-android/src/main/res/values/strings.xml
@@ -779,6 +779,7 @@
         "* Mike Karabushin\n"
         "* Aziz Batihk\n"
         "* Charles Bond\n"
+        "* Hillsborough Area Regional Transit (via Simon Jacobs at Cambridge Systematics)\n"
         "* Bridgette Eichelberger\n\n"
 
         "Want to contribute to this app? Check it out on Github at
